parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> declaration
Rule 4     statement -> assignment
Rule 5     statement -> expression
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> for_statement
Rule 9     statement -> function_declaration
Rule 10    statement -> return_statement
Rule 11    statement -> break_statement
Rule 12    statement -> continue_statement
Rule 13    statement -> block
Rule 14    block -> LBRACE statement_list RBRACE
Rule 15    statement_list -> statement
Rule 16    statement_list -> statement_list statement
Rule 17    declaration -> type ID EQUALS expression SEMICOLON
Rule 18    declaration -> type ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 19    declaration -> type ID SEMICOLON
Rule 20    assignment -> ID EQUALS expression SEMICOLON
Rule 21    assignment -> ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON
Rule 22    assignment -> ID INCREMENT SEMICOLON
Rule 23    assignment -> ID DECREMENT SEMICOLON
Rule 24    expression -> term
Rule 25    expression -> expression PLUS term
Rule 26    expression -> expression MINUS term
Rule 27    expression -> expression AND term
Rule 28    expression -> expression OR term
Rule 29    term -> factor
Rule 30    term -> term TIMES factor
Rule 31    term -> term DIVIDE factor
Rule 32    term -> term MODULO factor
Rule 33    term -> term EQUALS_EQUALS factor
Rule 34    term -> term NOT_EQUALS factor
Rule 35    term -> term LESS_THAN factor
Rule 36    term -> term GREATER_THAN factor
Rule 37    term -> term LESS_EQUALS factor
Rule 38    term -> term GREATER_EQUALS factor
Rule 39    factor -> NUMBER
Rule 40    factor -> STRING
Rule 41    factor -> ID
Rule 42    factor -> TRUE
Rule 43    factor -> FALSE
Rule 44    factor -> LPAREN expression RPAREN
Rule 45    factor -> ID LBRACKET expression RBRACKET
Rule 46    factor -> function_call
Rule 47    factor -> NOT factor
Rule 48    function_declaration -> FUNCTION type ID LPAREN parameter_list RPAREN block
Rule 49    parameter_list -> type ID
Rule 50    parameter_list -> parameter_list COMMA type ID
Rule 51    parameter_list -> empty
Rule 52    function_call -> ID LPAREN argument_list RPAREN
Rule 53    argument_list -> expression
Rule 54    argument_list -> argument_list COMMA expression
Rule 55    argument_list -> empty
Rule 56    if_statement -> IF LPAREN expression RPAREN block
Rule 57    if_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 58    while_statement -> WHILE LPAREN expression RPAREN block
Rule 59    for_statement -> FOR LPAREN declaration expression SEMICOLON expression RPAREN block
Rule 60    return_statement -> RETURN expression SEMICOLON
Rule 61    return_statement -> RETURN SEMICOLON
Rule 62    break_statement -> BREAK SEMICOLON
Rule 63    continue_statement -> CONTINUE SEMICOLON
Rule 64    type -> INT
Rule 65    type -> FLOAT
Rule 66    type -> STRING_TYPE
Rule 67    type -> BOOL
Rule 68    type -> VOID
Rule 69    type -> ARRAY
Rule 70    empty -> <empty>

Terminals, with rules where they appear

AND                  : 27
ARRAY                : 69
BOOL                 : 67
BREAK                : 62
COMMA                : 50 54
CONTINUE             : 63
DECREMENT            : 23
DIVIDE               : 31
ELSE                 : 57
EQUALS               : 17 20 21
EQUALS_EQUALS        : 33
FALSE                : 43
FLOAT                : 65
FOR                  : 59
FUNCTION             : 48
GREATER_EQUALS       : 38
GREATER_THAN         : 36
ID                   : 17 18 19 20 21 22 23 41 45 48 49 50 52
IF                   : 56 57
INCREMENT            : 22
INT                  : 64
LBRACE               : 14
LBRACKET             : 18 21 45
LESS_EQUALS          : 37
LESS_THAN            : 35
LPAREN               : 44 48 52 56 57 58 59
MINUS                : 26
MODULO               : 32
NOT                  : 47
NOT_EQUALS           : 34
NUMBER               : 18 39
OR                   : 28
PLUS                 : 25
RBRACE               : 14
RBRACKET             : 18 21 45
RETURN               : 60 61
RPAREN               : 44 48 52 56 57 58 59
SEMICOLON            : 17 18 19 20 21 22 23 59 60 61 62 63
STRING               : 40
STRING_TYPE          : 66
TIMES                : 30
TRUE                 : 42
VOID                 : 68
WHILE                : 58
error                : 

Nonterminals, with rules where they appear

argument_list        : 52 54
assignment           : 4
block                : 13 48 56 57 57 58 59
break_statement      : 11
continue_statement   : 12
declaration          : 3 59
empty                : 51 55
expression           : 5 17 20 21 21 25 26 27 28 44 45 53 54 56 57 58 59 59 60
factor               : 29 30 31 32 33 34 35 36 37 38 47
for_statement        : 8
function_call        : 46
function_declaration : 9
if_statement         : 6
parameter_list       : 48 50
program              : 2 0
return_statement     : 10
statement            : 1 2 15 16
statement_list       : 14 16
term                 : 24 25 26 27 28 30 31 32 33 34 35 36 37 38
type                 : 17 18 19 48 49 50
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . expression
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) statement -> . break_statement
    (12) statement -> . continue_statement
    (13) statement -> . block
    (17) declaration -> . type ID EQUALS expression SEMICOLON
    (18) declaration -> . type ID LBRACKET NUMBER RBRACKET SEMICOLON
    (19) declaration -> . type ID SEMICOLON
    (20) assignment -> . ID EQUALS expression SEMICOLON
    (21) assignment -> . ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (22) assignment -> . ID INCREMENT SEMICOLON
    (23) assignment -> . ID DECREMENT SEMICOLON
    (24) expression -> . term
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (56) if_statement -> . IF LPAREN expression RPAREN block
    (57) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (58) while_statement -> . WHILE LPAREN expression RPAREN block
    (59) for_statement -> . FOR LPAREN declaration expression SEMICOLON expression RPAREN block
    (48) function_declaration -> . FUNCTION type ID LPAREN parameter_list RPAREN block
    (60) return_statement -> . RETURN expression SEMICOLON
    (61) return_statement -> . RETURN SEMICOLON
    (62) break_statement -> . BREAK SEMICOLON
    (63) continue_statement -> . CONTINUE SEMICOLON
    (14) block -> . LBRACE statement_list RBRACE
    (64) type -> . INT
    (65) type -> . FLOAT
    (66) type -> . STRING_TYPE
    (67) type -> . BOOL
    (68) type -> . VOID
    (69) type -> . ARRAY
    (29) term -> . factor
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . term EQUALS_EQUALS factor
    (34) term -> . term NOT_EQUALS factor
    (35) term -> . term LESS_THAN factor
    (36) term -> . term GREATER_THAN factor
    (37) term -> . term LESS_EQUALS factor
    (38) term -> . term GREATER_EQUALS factor
    (39) factor -> . NUMBER
    (40) factor -> . STRING
    (41) factor -> . ID
    (42) factor -> . TRUE
    (43) factor -> . FALSE
    (44) factor -> . LPAREN expression RPAREN
    (45) factor -> . ID LBRACKET expression RBRACKET
    (46) factor -> . function_call
    (47) factor -> . NOT factor
    (52) function_call -> . ID LPAREN argument_list RPAREN

    ID              shift and go to state 15
    IF              shift and go to state 18
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    FUNCTION        shift and go to state 22
    RETURN          shift and go to state 23
    BREAK           shift and go to state 24
    CONTINUE        shift and go to state 25
    LBRACE          shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    BOOL            shift and go to state 30
    VOID            shift and go to state 31
    ARRAY           shift and go to state 32
    NUMBER          shift and go to state 16
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 19
    NOT             shift and go to state 38

    program                        shift and go to state 1
    statement                      shift and go to state 2
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_declaration           shift and go to state 9
    return_statement               shift and go to state 10
    break_statement                shift and go to state 11
    continue_statement             shift and go to state 12
    block                          shift and go to state 13
    type                           shift and go to state 14
    term                           shift and go to state 17
    factor                         shift and go to state 33
    function_call                  shift and go to state 37

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . expression
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) statement -> . break_statement
    (12) statement -> . continue_statement
    (13) statement -> . block
    (17) declaration -> . type ID EQUALS expression SEMICOLON
    (18) declaration -> . type ID LBRACKET NUMBER RBRACKET SEMICOLON
    (19) declaration -> . type ID SEMICOLON
    (20) assignment -> . ID EQUALS expression SEMICOLON
    (21) assignment -> . ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (22) assignment -> . ID INCREMENT SEMICOLON
    (23) assignment -> . ID DECREMENT SEMICOLON
    (24) expression -> . term
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . expression AND term
    (28) expression -> . expression OR term
    (56) if_statement -> . IF LPAREN expression RPAREN block
    (57) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (58) while_statement -> . WHILE LPAREN expression RPAREN block
    (59) for_statement -> . FOR LPAREN declaration expression SEMICOLON expression RPAREN block
    (48) function_declaration -> . FUNCTION type ID LPAREN parameter_list RPAREN block
    (60) return_statement -> . RETURN expression SEMICOLON
    (61) return_statement -> . RETURN SEMICOLON
    (62) break_statement -> . BREAK SEMICOLON
    (63) continue_statement -> . CONTINUE SEMICOLON
    (14) block -> . LBRACE statement_list RBRACE
    (64) type -> . INT
    (65) type -> . FLOAT
    (66) type -> . STRING_TYPE
    (67) type -> . BOOL
    (68) type -> . VOID
    (69) type -> . ARRAY
    (29) term -> . factor
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . term EQUALS_EQUALS factor
    (34) term -> . term NOT_EQUALS factor
    (35) term -> . term LESS_THAN factor
    (36) term -> . term GREATER_THAN factor
    (37) term -> . term LESS_EQUALS factor
    (38) term -> . term GREATER_EQUALS factor
    (39) factor -> . NUMBER
    (40) factor -> . STRING
    (41) factor -> . ID
    (42) factor -> . TRUE
    (43) factor -> . FALSE
    (44) factor -> . LPAREN expression RPAREN
    (45) factor -> . ID LBRACKET expression RBRACKET
    (46) factor -> . function_call
    (47) factor -> . NOT factor
    (52) function_call -> . ID LPAREN argument_list RPAREN

    ID              shift and go to state 15
    IF              shift and go to state 18
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    FUNCTION        shift and go to state 22
    RETURN          shift and go to state 23
    BREAK           shift and go to state 24
    CONTINUE        shift and go to state 25
    LBRACE          shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    BOOL            shift and go to state 30
    VOID            shift and go to state 31
    ARRAY           shift and go to state 32
    NUMBER          shift and go to state 16
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 19
    NOT             shift and go to state 38

    statement                      shift and go to state 39
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_declaration           shift and go to state 9
    return_statement               shift and go to state 10
    break_statement                shift and go to state 11
    continue_statement             shift and go to state 12
    block                          shift and go to state 13
    type                           shift and go to state 14
    term                           shift and go to state 17
    factor                         shift and go to state 33
    function_call                  shift and go to state 37

state 2

    (1) program -> statement .

    ID              reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    FOR             reduce using rule 1 (program -> statement .)
    FUNCTION        reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    BREAK           reduce using rule 1 (program -> statement .)
    CONTINUE        reduce using rule 1 (program -> statement .)
    LBRACE          reduce using rule 1 (program -> statement .)
    INT             reduce using rule 1 (program -> statement .)
    FLOAT           reduce using rule 1 (program -> statement .)
    STRING_TYPE     reduce using rule 1 (program -> statement .)
    BOOL            reduce using rule 1 (program -> statement .)
    VOID            reduce using rule 1 (program -> statement .)
    ARRAY           reduce using rule 1 (program -> statement .)
    NUMBER          reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    TRUE            reduce using rule 1 (program -> statement .)
    FALSE           reduce using rule 1 (program -> statement .)
    LPAREN          reduce using rule 1 (program -> statement .)
    NOT             reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> declaration .

    ID              reduce using rule 3 (statement -> declaration .)
    IF              reduce using rule 3 (statement -> declaration .)
    WHILE           reduce using rule 3 (statement -> declaration .)
    FOR             reduce using rule 3 (statement -> declaration .)
    FUNCTION        reduce using rule 3 (statement -> declaration .)
    RETURN          reduce using rule 3 (statement -> declaration .)
    BREAK           reduce using rule 3 (statement -> declaration .)
    CONTINUE        reduce using rule 3 (statement -> declaration .)
    LBRACE          reduce using rule 3 (statement -> declaration .)
    INT             reduce using rule 3 (statement -> declaration .)
    FLOAT           reduce using rule 3 (statement -> declaration .)
    STRING_TYPE     reduce using rule 3 (statement -> declaration .)
    BOOL            reduce using rule 3 (statement -> declaration .)
    VOID            reduce using rule 3 (statement -> declaration .)
    ARRAY           reduce using rule 3 (statement -> declaration .)
    NUMBER          reduce using rule 3 (statement -> declaration .)
    STRING          reduce using rule 3 (statement -> declaration .)
    TRUE            reduce using rule 3 (statement -> declaration .)
    FALSE           reduce using rule 3 (statement -> declaration .)
    LPAREN          reduce using rule 3 (statement -> declaration .)
    NOT             reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)
    RBRACE          reduce using rule 3 (statement -> declaration .)


state 4

    (4) statement -> assignment .

    ID              reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    FUNCTION        reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    CONTINUE        reduce using rule 4 (statement -> assignment .)
    LBRACE          reduce using rule 4 (statement -> assignment .)
    INT             reduce using rule 4 (statement -> assignment .)
    FLOAT           reduce using rule 4 (statement -> assignment .)
    STRING_TYPE     reduce using rule 4 (statement -> assignment .)
    BOOL            reduce using rule 4 (statement -> assignment .)
    VOID            reduce using rule 4 (statement -> assignment .)
    ARRAY           reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    STRING          reduce using rule 4 (statement -> assignment .)
    TRUE            reduce using rule 4 (statement -> assignment .)
    FALSE           reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    NOT             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> expression .
    (25) expression -> expression . PLUS term
    (26) expression -> expression . MINUS term
    (27) expression -> expression . AND term
    (28) expression -> expression . OR term

    ID              reduce using rule 5 (statement -> expression .)
    IF              reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    FOR             reduce using rule 5 (statement -> expression .)
    FUNCTION        reduce using rule 5 (statement -> expression .)
    RETURN          reduce using rule 5 (statement -> expression .)
    BREAK           reduce using rule 5 (statement -> expression .)
    CONTINUE        reduce using rule 5 (statement -> expression .)
    LBRACE          reduce using rule 5 (statement -> expression .)
    INT             reduce using rule 5 (statement -> expression .)
    FLOAT           reduce using rule 5 (statement -> expression .)
    STRING_TYPE     reduce using rule 5 (statement -> expression .)
    BOOL            reduce using rule 5 (statement -> expression .)
    VOID            reduce using rule 5 (statement -> expression .)
    ARRAY           reduce using rule 5 (statement -> expression .)
    NUMBER          reduce using rule 5 (statement -> expression .)
    STRING          reduce using rule 5 (statement -> expression .)
    TRUE            reduce using rule 5 (statement -> expression .)
    FALSE           reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    NOT             reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    RBRACE          reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43


state 6

    (6) statement -> if_statement .

    ID              reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    FUNCTION        reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    BREAK           reduce using rule 6 (statement -> if_statement .)
    CONTINUE        reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    STRING_TYPE     reduce using rule 6 (statement -> if_statement .)
    BOOL            reduce using rule 6 (statement -> if_statement .)
    VOID            reduce using rule 6 (statement -> if_statement .)
    ARRAY           reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    TRUE            reduce using rule 6 (statement -> if_statement .)
    FALSE           reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    ID              reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    FUNCTION        reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    BREAK           reduce using rule 7 (statement -> while_statement .)
    CONTINUE        reduce using rule 7 (statement -> while_statement .)
    LBRACE          reduce using rule 7 (statement -> while_statement .)
    INT             reduce using rule 7 (statement -> while_statement .)
    FLOAT           reduce using rule 7 (statement -> while_statement .)
    STRING_TYPE     reduce using rule 7 (statement -> while_statement .)
    BOOL            reduce using rule 7 (statement -> while_statement .)
    VOID            reduce using rule 7 (statement -> while_statement .)
    ARRAY           reduce using rule 7 (statement -> while_statement .)
    NUMBER          reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    TRUE            reduce using rule 7 (statement -> while_statement .)
    FALSE           reduce using rule 7 (statement -> while_statement .)
    LPAREN          reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> for_statement .

    ID              reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    FUNCTION        reduce using rule 8 (statement -> for_statement .)
    RETURN          reduce using rule 8 (statement -> for_statement .)
    BREAK           reduce using rule 8 (statement -> for_statement .)
    CONTINUE        reduce using rule 8 (statement -> for_statement .)
    LBRACE          reduce using rule 8 (statement -> for_statement .)
    INT             reduce using rule 8 (statement -> for_statement .)
    FLOAT           reduce using rule 8 (statement -> for_statement .)
    STRING_TYPE     reduce using rule 8 (statement -> for_statement .)
    BOOL            reduce using rule 8 (statement -> for_statement .)
    VOID            reduce using rule 8 (statement -> for_statement .)
    ARRAY           reduce using rule 8 (statement -> for_statement .)
    NUMBER          reduce using rule 8 (statement -> for_statement .)
    STRING          reduce using rule 8 (statement -> for_statement .)
    TRUE            reduce using rule 8 (statement -> for_statement .)
    FALSE           reduce using rule 8 (statement -> for_statement .)
    LPAREN          reduce using rule 8 (statement -> for_statement .)
    NOT             reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RBRACE          reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> function_declaration .

    ID              reduce using rule 9 (statement -> function_declaration .)
    IF              reduce using rule 9 (statement -> function_declaration .)
    WHILE           reduce using rule 9 (statement -> function_declaration .)
    FOR             reduce using rule 9 (statement -> function_declaration .)
    FUNCTION        reduce using rule 9 (statement -> function_declaration .)
    RETURN          reduce using rule 9 (statement -> function_declaration .)
    BREAK           reduce using rule 9 (statement -> function_declaration .)
    CONTINUE        reduce using rule 9 (statement -> function_declaration .)
    LBRACE          reduce using rule 9 (statement -> function_declaration .)
    INT             reduce using rule 9 (statement -> function_declaration .)
    FLOAT           reduce using rule 9 (statement -> function_declaration .)
    STRING_TYPE     reduce using rule 9 (statement -> function_declaration .)
    BOOL            reduce using rule 9 (statement -> function_declaration .)
    VOID            reduce using rule 9 (statement -> function_declaration .)
    ARRAY           reduce using rule 9 (statement -> function_declaration .)
    NUMBER          reduce using rule 9 (statement -> function_declaration .)
    STRING          reduce using rule 9 (statement -> function_declaration .)
    TRUE            reduce using rule 9 (statement -> function_declaration .)
    FALSE           reduce using rule 9 (statement -> function_declaration .)
    LPAREN          reduce using rule 9 (statement -> function_declaration .)
    NOT             reduce using rule 9 (statement -> function_declaration .)
    $end            reduce using rule 9 (statement -> function_declaration .)
    RBRACE          reduce using rule 9 (statement -> function_declaration .)


state 10

    (10) statement -> return_statement .

    ID              reduce using rule 10 (statement -> return_statement .)
    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    FOR             reduce using rule 10 (statement -> return_statement .)
    FUNCTION        reduce using rule 10 (statement -> return_statement .)
    RETURN          reduce using rule 10 (statement -> return_statement .)
    BREAK           reduce using rule 10 (statement -> return_statement .)
    CONTINUE        reduce using rule 10 (statement -> return_statement .)
    LBRACE          reduce using rule 10 (statement -> return_statement .)
    INT             reduce using rule 10 (statement -> return_statement .)
    FLOAT           reduce using rule 10 (statement -> return_statement .)
    STRING_TYPE     reduce using rule 10 (statement -> return_statement .)
    BOOL            reduce using rule 10 (statement -> return_statement .)
    VOID            reduce using rule 10 (statement -> return_statement .)
    ARRAY           reduce using rule 10 (statement -> return_statement .)
    NUMBER          reduce using rule 10 (statement -> return_statement .)
    STRING          reduce using rule 10 (statement -> return_statement .)
    TRUE            reduce using rule 10 (statement -> return_statement .)
    FALSE           reduce using rule 10 (statement -> return_statement .)
    LPAREN          reduce using rule 10 (statement -> return_statement .)
    NOT             reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RBRACE          reduce using rule 10 (statement -> return_statement .)


state 11

    (11) statement -> break_statement .

    ID              reduce using rule 11 (statement -> break_statement .)
    IF              reduce using rule 11 (statement -> break_statement .)
    WHILE           reduce using rule 11 (statement -> break_statement .)
    FOR             reduce using rule 11 (statement -> break_statement .)
    FUNCTION        reduce using rule 11 (statement -> break_statement .)
    RETURN          reduce using rule 11 (statement -> break_statement .)
    BREAK           reduce using rule 11 (statement -> break_statement .)
    CONTINUE        reduce using rule 11 (statement -> break_statement .)
    LBRACE          reduce using rule 11 (statement -> break_statement .)
    INT             reduce using rule 11 (statement -> break_statement .)
    FLOAT           reduce using rule 11 (statement -> break_statement .)
    STRING_TYPE     reduce using rule 11 (statement -> break_statement .)
    BOOL            reduce using rule 11 (statement -> break_statement .)
    VOID            reduce using rule 11 (statement -> break_statement .)
    ARRAY           reduce using rule 11 (statement -> break_statement .)
    NUMBER          reduce using rule 11 (statement -> break_statement .)
    STRING          reduce using rule 11 (statement -> break_statement .)
    TRUE            reduce using rule 11 (statement -> break_statement .)
    FALSE           reduce using rule 11 (statement -> break_statement .)
    LPAREN          reduce using rule 11 (statement -> break_statement .)
    NOT             reduce using rule 11 (statement -> break_statement .)
    $end            reduce using rule 11 (statement -> break_statement .)
    RBRACE          reduce using rule 11 (statement -> break_statement .)


state 12

    (12) statement -> continue_statement .

    ID              reduce using rule 12 (statement -> continue_statement .)
    IF              reduce using rule 12 (statement -> continue_statement .)
    WHILE           reduce using rule 12 (statement -> continue_statement .)
    FOR             reduce using rule 12 (statement -> continue_statement .)
    FUNCTION        reduce using rule 12 (statement -> continue_statement .)
    RETURN          reduce using rule 12 (statement -> continue_statement .)
    BREAK           reduce using rule 12 (statement -> continue_statement .)
    CONTINUE        reduce using rule 12 (statement -> continue_statement .)
    LBRACE          reduce using rule 12 (statement -> continue_statement .)
    INT             reduce using rule 12 (statement -> continue_statement .)
    FLOAT           reduce using rule 12 (statement -> continue_statement .)
    STRING_TYPE     reduce using rule 12 (statement -> continue_statement .)
    BOOL            reduce using rule 12 (statement -> continue_statement .)
    VOID            reduce using rule 12 (statement -> continue_statement .)
    ARRAY           reduce using rule 12 (statement -> continue_statement .)
    NUMBER          reduce using rule 12 (statement -> continue_statement .)
    STRING          reduce using rule 12 (statement -> continue_statement .)
    TRUE            reduce using rule 12 (statement -> continue_statement .)
    FALSE           reduce using rule 12 (statement -> continue_statement .)
    LPAREN          reduce using rule 12 (statement -> continue_statement .)
    NOT             reduce using rule 12 (statement -> continue_statement .)
    $end            reduce using rule 12 (statement -> continue_statement .)
    RBRACE          reduce using rule 12 (statement -> continue_statement .)


state 13

    (13) statement -> block .

    ID              reduce using rule 13 (statement -> block .)
    IF              reduce using rule 13 (statement -> block .)
    WHILE           reduce using rule 13 (statement -> block .)
    FOR             reduce using rule 13 (statement -> block .)
    FUNCTION        reduce using rule 13 (statement -> block .)
    RETURN          reduce using rule 13 (statement -> block .)
    BREAK           reduce using rule 13 (statement -> block .)
    CONTINUE        reduce using rule 13 (statement -> block .)
    LBRACE          reduce using rule 13 (statement -> block .)
    INT             reduce using rule 13 (statement -> block .)
    FLOAT           reduce using rule 13 (statement -> block .)
    STRING_TYPE     reduce using rule 13 (statement -> block .)
    BOOL            reduce using rule 13 (statement -> block .)
    VOID            reduce using rule 13 (statement -> block .)
    ARRAY           reduce using rule 13 (statement -> block .)
    NUMBER          reduce using rule 13 (statement -> block .)
    STRING          reduce using rule 13 (statement -> block .)
    TRUE            reduce using rule 13 (statement -> block .)
    FALSE           reduce using rule 13 (statement -> block .)
    LPAREN          reduce using rule 13 (statement -> block .)
    NOT             reduce using rule 13 (statement -> block .)
    $end            reduce using rule 13 (statement -> block .)
    RBRACE          reduce using rule 13 (statement -> block .)


state 14

    (17) declaration -> type . ID EQUALS expression SEMICOLON
    (18) declaration -> type . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (19) declaration -> type . ID SEMICOLON

    ID              shift and go to state 44


state 15

    (20) assignment -> ID . EQUALS expression SEMICOLON
    (21) assignment -> ID . LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (22) assignment -> ID . INCREMENT SEMICOLON
    (23) assignment -> ID . DECREMENT SEMICOLON
    (41) factor -> ID .
    (45) factor -> ID . LBRACKET expression RBRACKET
    (52) function_call -> ID . LPAREN argument_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUALS          shift and go to state 45
    LBRACKET        shift and go to state 46
    INCREMENT       shift and go to state 47
    DECREMENT       shift and go to state 48
    TIMES           reduce using rule 41 (factor -> ID .)
    DIVIDE          reduce using rule 41 (factor -> ID .)
    MODULO          reduce using rule 41 (factor -> ID .)
    EQUALS_EQUALS   reduce using rule 41 (factor -> ID .)
    NOT_EQUALS      reduce using rule 41 (factor -> ID .)
    LESS_THAN       reduce using rule 41 (factor -> ID .)
    GREATER_THAN    reduce using rule 41 (factor -> ID .)
    LESS_EQUALS     reduce using rule 41 (factor -> ID .)
    GREATER_EQUALS  reduce using rule 41 (factor -> ID .)
    PLUS            reduce using rule 41 (factor -> ID .)
    MINUS           reduce using rule 41 (factor -> ID .)
    AND             reduce using rule 41 (factor -> ID .)
    OR              reduce using rule 41 (factor -> ID .)
    ID              reduce using rule 41 (factor -> ID .)
    IF              reduce using rule 41 (factor -> ID .)
    WHILE           reduce using rule 41 (factor -> ID .)
    FOR             reduce using rule 41 (factor -> ID .)
    FUNCTION        reduce using rule 41 (factor -> ID .)
    RETURN          reduce using rule 41 (factor -> ID .)
    BREAK           reduce using rule 41 (factor -> ID .)
    CONTINUE        reduce using rule 41 (factor -> ID .)
    LBRACE          reduce using rule 41 (factor -> ID .)
    INT             reduce using rule 41 (factor -> ID .)
    FLOAT           reduce using rule 41 (factor -> ID .)
